# financial-advisory-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/clients/: james_okafor.json  margaret_osei.json  priya_nair.json  richard_stavros.json  sarah_chen.json
data/knowledge/: asset_allocation.txt  common_mistakes.txt  risk_diversification.txt  tax_advantaged_accounts.txt
src/financial_advisory_agent/: api.py  config.py  main.py  models.py  tools.py  workflow.py
src/financial_advisory_agent/agents/: __init__.py  _common.py  advisor.py  analyst.py  client.py
